--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
     --main-bg-color: hsl(0, 0%, 98%);
     --main-bg-img: url(./images/bg-desktop-light.jpg);
     --theme-bg-img: url(./images/icon-moon.svg);
+    --circle-color: hsl(233, 11%, 84%);
+    --input-bg: #ffffff;
   }
   
 [data-theme="dark"] {
@@ -12,10 +14,16 @@
     --main-bg-color: hsl(235, 21%, 11%);
     --main-bg-img: url(./images/bg-desktop-dark.jpg);
     --theme-bg-img: url(./images/icon-sun.svg);
+    --circle-color:  hsl(234, 39%, 85%);
+    --input-bg: #25273c;
 }
 
 *{
  box-sizing: border-box;
+}
+
+html{
+    background-color: var(--main-bg-color);
 }
 
 body, html {
@@ -33,7 +41,8 @@ main {
 }
 .container{
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 h1{
@@ -45,8 +54,8 @@ h1{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 80px;
-    width: 36%;
+    margin-top: 75px;
+    width: 720px;  
 }
 
 .themeIcon {
@@ -63,4 +72,37 @@ h1{
     text-decoration: none;
     border: none;
     background-color: inherit;
+}
+
+#inputTodo{
+    width: 720px;
+    height: 60px;
+    border: 0px solid transparent;
+    border-radius: 4px;
+    padding-top: 0.3rem;
+    padding-left: 4rem;
+    font-size: 18px;
+    font-family: 'Josefin Sans', sans-serif;
+    background-color: var(--input-bg);
+}
+
+#inputTodo::placeholder{
+    font-size: 18px;
+    font-family: 'Josefin Sans', sans-serif;
+    color: hsl(236, 9%, 61%);
+}
+
+#inputTodo:focus{
+    outline: none;
+}
+
+
+.circle{
+    border: 1px solid var(--circle-color);
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    position: absolute;
+    margin-top: 0.85rem;
+    margin-left: -18.8rem;  
 }
